Fix spacing.

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   margin-bottom: 30px;
 }
 
-@media (min-width: 950px) {
+@media (min-width: 750px) {
   .stopwatches {
     display: flex;
     flex-wrap: wrap;
@@ -128,6 +128,12 @@ button:active {
 }
 
 @media (min-width: 750px) {
+  .stopwatch {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1000px) {
   .stopwatch {
     width: 33%;
   }
